refactor: centralize game flow and setup logic
- handle dialogs and player setup in gameController
- remove hardcoded ship placement
- update UI to support setup and game screen

--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+body {
+    background-color: #8399a8;
+}
 
 main {
     height: 100vh;
@@ -20,4 +23,8 @@ main {
     height: 48px;
     border: 1px solid black;
     background-color: white;
+}
+
+#startingWindow {
+    background-color: red;
 }
