--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #8399a8;
+    background-color: darkorange;
 }
 
 main {
@@ -18,6 +18,16 @@ main {
     flex-wrap: wrap;
 }
 
+.gameboardsContainer {
+    display: flex;
+}
+
+.btnContainer {
+    display: flex;
+    flex-direction: column;
+    gap: .5em;
+}
+
 .cell {
     width: 48px;
     height: 48px;
@@ -25,6 +35,25 @@ main {
     background-color: white;
 }
 
+.playerFleetContainer {
+    border: 2px solid black;
+    border-radius: 1rem;
+    padding: 20px;
+    background-color: white;
+}
+
+.ship{
+    background-color: red;
+    margin: 1rem;
+    padding: .5em;
+    text-align: center;
+
+}
+
 #startingWindow {
     background-color: red;
+}
+
+.active {
+    background-color: green;
 }
